# sky_whale

./: .env.example  .gitignore  Dockerfile  README.md  application.yml  deploy.sh  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setting.py
sky_whale/: extended_bot.py
sky_whale/cog/: admin_cog.py  music_cog.py
sky_whale/component/: music.py
sky_whale/db/: base.py  music_channel.py  sqlite_connector.py  supabase_connector.py
sky_whale/dto/: music_channel_dto.py
sky_whale/embed/: delete_ui.py  help_ui.py  music_ui.py  search.py  search_ui.py
sky_whale/search/: youtube.py
sky_whale/type/: types.py
sky_whale/util/: check.py  log.py  string.py
tests/search/: youtube_test.py
