[tool.poetry]
name = "sky-whale"
version = "0.1.0"
description = ""
authors = ["kiryanchi <kiryanchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = {extras = ["voice"], version = "^2.3.2"}
rich = "^13.7.1"
wavelink = "^3.4.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
